[package]
name = "piggame"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
warp = "0.3"
serde_json = "1.0"
dashmap = "5.4.0"
reqwest = { version = "0.11.16", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
rand = "0.8.5"
tracing = "0.1"
tracing-subscriber = "0.3"
openssl = { version = "0.10", features = ["vendored"] }
futures = "0.3.29"
eventsource-stream = "0.2.3"
